objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Accrued_Deferred__c</fullName>
        <formula>Accrued_Revenue__c +  Deferred_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrued+Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accrued_Revenue_Formula__c</fullName>
        <formula>IF(Deferred_Revenue__c &lt; 0, ABS(Deferred_Revenue__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrued Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accrued_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Invoice_Date__c</fullName>
        <label>Actual Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cumulative_Cost_of_Revenue__c</fullName>
        <label>Cumulative Cost of Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gross_Profit__c</fullName>
        <label>Cumulative Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Invoices__c</fullName>
        <label>Cumulative Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Revenue__c</fullName>
        <label>Cumulative Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Formula__c</fullName>
        <formula>IF(Deferred_Revenue__c &gt;= 0, Deferred_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deferred Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue__c</fullName>
        <label>Deferred Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enforce_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Num__c</fullName>
        <defaultValue>'NA'</defaultValue>
        <label>Invoice #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <label>Milestone Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Services__c</fullName>
        <label>Monthly Revenue Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Subscription__c</fullName>
        <label>Monthly Revenue Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Accounts_Receivable__c</fullName>
        <label>Net Accounts Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>I-{0}</displayFormat>
        <label>SF #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>